--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Nunito+Sans:wght@300;400;500;600;700;800&display=swap');
+
 @tailwind base;
+
+@layer base {
+	body {
+		@apply bg-white font-nunito-sans;
+	}
+
+	h1 {
+		@apply text-xl text-profile-red;
+	}
+
+	h2 {
+		@apply mb-4 text-xl font-bold;
+	}
+
+	h3 {
+		@apply mb-2 text-lg font-semibold;
+	}
+
+	h4 {
+		@apply mb-4 text-base font-medium text-blue-200;
+	}
+
+	h2,
+	h3,
+	h4 {
+		@apply uppercase tracking-wider;
+	}
+
+	p {
+		@apply mb-4 text-sm leading-6;
+	}
+
+	blockquote {
+		@apply my-6 border-l-4 pl-4;
+	}
+}
+
 @tailwind components;
+
+@layer components {
+	.folder {
+		@apply ml-auto mr-2 inline-block text-2xl;
+	}
+}
+
 @tailwind utilities;
