--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Nunito+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Nunito+Sans:wght@200;300;400;500;600;700;800&display=swap');
 
 @tailwind base;
 
@@ -8,7 +8,7 @@
 	}
 
 	h1 {
-		@apply text-xl;
+		@apply font-caveat text-xl;
 	}
 
 	h2 {
@@ -41,9 +41,23 @@
 @tailwind components;
 
 @layer components {
-	.folder {
-		@apply ml-auto mr-2 inline-block text-2xl;
+	.btn {
+		@apply w-fit text-gray-400 hover:text-white;
 	}
 }
 
 @tailwind utilities;
+
+@layer utilities {
+	.external-link {
+		@apply flex w-fit cursor-pointer items-center gap-1 text-gray-400 hover:text-white;
+	}
+
+	.hide {
+		@apply opacity-0 transition-all duration-700;
+	}
+
+	.show {
+		@apply opacity-100;
+	}
+}
