--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Nunito+Sans:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Outfit:wght@600&display=swap');
 
 @tailwind base;
 
 @layer base {
 	body {
-		@apply bg-gray-900 font-nunito-sans text-white;
+		@apply overflow-y-scroll bg-zinc-950 font-inter text-zinc-400;
 	}
 
-	h1 {
-		@apply font-caveat text-xl;
-	}
-
-	h2 {
-		@apply mb-4 text-xl font-bold;
+	h1,
+	h2,
+	h4 {
+		@apply mb-4 font-outfit text-[12px] font-semibold uppercase tracking-[0.2em] text-sky-300;
 	}
 
 	h3 {
-		@apply text-lg font-semibold;
-	}
-
-	h4 {
-		@apply mb-4 text-base font-medium;
-	}
-
-	h2,
-	h3,
-	h4 {
-		@apply tracking-wider;
+		@apply mb-4 font-semibold text-white;
 	}
 
 	p {
-		@apply mb-4 mt-1 text-sm leading-6 text-gray-300;
+		@apply text-sm leading-6;
 	}
 
 	blockquote {
@@ -42,7 +30,15 @@
 
 @layer components {
 	.btn {
-		@apply w-fit text-gray-400 hover:text-white;
+		@apply w-fit text-[14px] hover:text-white;
+	}
+
+	.learnings li {
+		@apply mb-6 ml-4 list-disc text-sm leading-6 last-of-type:mb-0;
+	}
+
+	.process hr {
+		@apply my-[13.5px] opacity-0;
 	}
 }
 
@@ -50,11 +46,11 @@
 
 @layer utilities {
 	.external-link {
-		@apply flex w-fit cursor-pointer items-center gap-1 text-gray-400 hover:text-white;
+		@apply flex w-fit cursor-pointer items-center gap-1 text-[14px] hover:text-white hover:underline;
 	}
 
 	.hide {
-		@apply opacity-0 transition-all duration-700;
+		@apply opacity-0 transition-all duration-700 motion-reduce:opacity-100 motion-reduce:transition-none;
 	}
 
 	.show {
